# base-connector-tools

./: .gitignore  Cargo.toml  README.md
build_templates/: action_routing.rs.template  actions_mod.rs.template  delete_executor.rs.template  embedded_schemas.rs.template  get_executor.rs.template  path_parameter_functions.rs.template  post_patch_executor.rs.template  query_parameter_functions.rs.template  trigger_executor.rs.template
src/: lib.rs  openapi.rs  postman_collection.rs
