[package]
name = "base-connector-tools"
version = "0.1.0"
edition = "2024"
authors = ["Standout <info@standout.se>"]
description = "Development tools for generating connector actions from OpenAPI specifications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/standout/base-connector-tools"

[lib]
name = "base_connector_tools"
path = "src/lib.rs"

[[bin]]
name = "endpoints"
path = "src/bin/discover_actions.rs"

[[bin]]
name = "generate_action"
path = "src/bin/generate_action_main.rs"

[[bin]]
name = "generate_trigger"
path = "src/bin/generate_trigger_main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }

